dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(spacechart,"0.9.5")

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AM_PROG_LEX
AC_PROG_YACC
AC_ARG_PROGRAM

GNOME_COMPILE_WARNINGS

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, sin)

ALL_LINGUAS="es bg fr"
AM_GNU_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

dnl Checks for library functions.

AC_OUTPUT([
Makefile
src/Makefile
include/Makefile
pixmaps/Makefile
intl/Makefile
po/Makefile.in
data/Makefile
doc/Makefile])
