noinst_HEADERS = config_dialog.h gui.h link.h link_config.h link_draw_rules.h \
	link_index.h link_selection.h map.h map_widget.h perspective.h \
	settings.h star.h star_catalog.h star_config.h star_draw_rules.h \
	star_index.h star_info_dialog.h star_selection.h \
	star_selection_dialog.h starmap.h rcparser.h keys.h \
	star_list_dialog.h